# AniStream-CLI

./: .gitattributes  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.agents/skills/add-anistream-provider/: SKILL.md
.agents/skills/add-anistream-provider/agents/: openai.yaml
src/anistream/: __init__.py  app.py  cli.py  errors.py  models.py
src/anistream/providers/: __init__.py  anime_sama.py  base.py  french_stream.py  registry.py
src/anistream/resolvers/: __init__.py  base.py  hosts.py  registry.py
src/anistream/services/: downloader.py  history.py  local_library.py  media_probe.py  media_validator.py  player.py  settings.py  source_planner.py
src/anistream/utils/: http.py  js_unpack.py  paths.py
tests/: test_app.py  test_cli.py  test_downloader.py  test_french_stream_provider.py  test_history.py  test_http.py  test_local_library.py  test_media_validator.py  test_planner.py  test_player.py  test_provider.py  test_resolvers.py  test_settings.py
